app/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt
  finalizers:
  - networking.gke.io/ingress-finalizer-V2
  generation: 1
  name: infra-dashboard-ingress
spec:
  rules:
  - host: dashboard.infra.adeptmind.net
    http:
      paths:
      - backend:
          service:
            name: infra-dashboard-svc
            port:
              number: 9090
        pathType: ImplementationSpecific
  - host: dashboard.retail.adeptmind.net
    http:
      paths:
      - backend:
          service:
            name: infra-dashboard-svc
            port:
              number: 9090
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - dashboard.retail.adeptmind.net
    - dashboard.infra.adeptmind.net
